Connection search and Chargeback